Utworzono za pomocą Colaboratory

--- a/analiza_sieciowa.ipynb
+++ b/analiza_sieciowa.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN124CDSm0AfGr45UVUy6cc",
+      "mount_file_id": "1PPAStWuFlghZOqaXATOAy8dfq38f2JlN",
+      "authorship_tag": "ABX9TyMKgOxURajULpVb3xYr24XV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 32,
       "metadata": {
         "id": "vUjPUpTwz2JS"
       },
@@ -37,31 +38,33 @@
         "import pandas as pd\n",
         "import networkx as nx\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "from unidecode import unidecode"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#wig20tabela = pd.read_html('https://stooq.pl/t/?i=532')[1]\n",
-        "#wig20 = wig20tabela.drop(wig20tabela.columns[-1], axis=1).dropna()\n",
-        "#first_column = wig20.iloc[:, 0].tolist()\n",
-        "#print(first_column)"
+        "wig20tabela = pd.read_html('https://stooq.pl/t/?i=532')[1]\n",
+        "wig20 = wig20tabela.drop(wig20tabela.columns[-1], axis=1).dropna()\n",
+        "second_wig20 = wig20.iloc[:, 1].tolist()\n",
+        "print(second_wig20)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jdPM7NyZkyr",
-        "outputId": "a564e7c2-6735-41c4-858f-f55bc24fee3a"
+        "outputId": "acaccdbc-40df-44e9-f057-b20ae1ce8f3b"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['ACP', 'ALE', 'ALR', 'CDR', 'CPS', 'DNP', 'JSW', 'KGH', 'KRU', 'KTY', 'LPP', 'MBK', 'OPL', 'PCO', 'PEO', 'PGE', 'PKN', 'PKO', 'PZU', 'SPL']\n"
+            "['ASSECOPOL', 'ALLEGRO', 'ALIOR', 'CDPROJEKT', 'CYFRPLSAT', 'DINOPL', 'JSW', 'KGHM', 'KRUK', 'KETY', 'LPP', 'MBANK', 'ORANGEPL', 'PEPCO', 'PEKAO', 'PGE', 'PKNORLEN', 'PKOBP', 'PZU', 'SANPL']\n"
           ]
         }
       ]
@@ -69,7 +72,114 @@
     {
       "cell_type": "code",
       "source": [
-        "mwig40tabela = pd.read_html('https://stooq.pl/q/i/?s=mwig40')[1]\n",
+        "wigbanki_tabela = pd.read_html('https://stooq.pl/q/i/?s=wig_banki')[1]\n",
+        "wigbanki = wigbanki_tabela.iloc[5:-1,:]\n",
+        "second_wigbanki = wigbanki.iloc[:, 1].tolist()\n",
+        "print(second_wigbanki)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5G8p0kbWEF9_",
+        "outputId": "a4c42af8-3e78-4cdf-a1d7-733099a19c2c"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ALIOR', 'HANDLOWY', 'BNPPPL', 'BOS', 'GETIN', 'INGBSK', 'MBANK', 'MILLENNIUM', 'PEKAO', 'PKOBP', 'SANTANDER', 'SANPL', 'UNICREDIT']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m40_tabela = pd.read_html('http://stooq.pl/q/i/?s=mwig40')[1]\n",
+        "m40 = m40_tabela.iloc[5:-1,:]\n",
+        "second_mwig40 = m40.iloc[:, 1].tolist()\n",
+        "print(second_mwig40)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-jchaS5GFXny",
+        "outputId": "b6fc76e2-4ee4-43d4-f0ae-f6d06572d185"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['11BIT', 'AUTOPARTN', 'ASBIS', 'GRUPAAZOTY', 'BUDIMEX', 'BENEFIT', 'HANDLOWY', 'BUMECH', 'BIOMEDLUB', 'BNPPPL', 'INTERCARS', 'CCC', 'CIECH', 'COMARCH', 'DOMDEV', 'DEVELIA', 'AMREST', 'ENEA', 'EUROCASH', 'GRENEVIA', 'GRUPRACUJ', 'GPW', 'HUUUGE', 'INGBSK', 'KERNEL', 'LIVECHAT', 'BOGDANKA', 'MABION', 'MOBRUK', 'MILLENNIUM', 'NEUCA', 'PEP', 'PKPCARGO', 'SELVITA', 'STSHOLDING', 'TSGAMES', 'TAURONPE', 'WIRTUALNA', 'XTB', 'ZEPAK']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from bs4 import BeautifulSoup\n",
+        "import requests\n",
+        "url = 'https://stooq.pl/q/i/?s=mwig40'  # Replace with the URL of the webpage containing the table\n",
+        "response = requests.get(url)\n",
+        "html_content = response.content\n",
+        "soup = BeautifulSoup(html_content, 'html.parser')\n",
+        "table = soup.find('table', id='fth1')\n",
+        "#table = soup.find('table')\n",
+        "#df = pd.read_html(str(table))[1]"
+      ],
+      "metadata": {
+        "id": "3MuiFBeBqbAD"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "94-mybXvECgN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mwig40tabela = pd.read_html('http://stooq.pl/q/i/?s=mwig40')[1]\n",
+        "mwig40tabela = mwig40tabela.iloc[5:-1, :]\n",
+        "mwig40 = mwig40tabela.drop(mwig40tabela.columns[-1], axis=1)\n",
+        "first_column = mwig40.iloc[:, 0].tolist()\n",
+        "print(first_column)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l_JnwL4z1bXz",
+        "outputId": "efff942a-91a9-40ce-ddee-5dfd42662a69"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['11B', 'APR', 'ASB', 'ATT', 'BDX', 'BFT', 'BHW', 'BMC', 'BML', 'BNP', 'CAR', 'CCC', 'CIE', 'CMR', 'DOM', 'DVL', 'EAT', 'ENA', 'EUR', 'GEA', 'GPP', 'GPW', 'HUG', 'ING', 'KER', 'LVC', 'LWB', 'MAB', 'MBR', 'MIL', 'NEU', 'PEP', 'PKP', 'SLV', 'STH', 'TEN', 'TPE', 'WPL', 'XTB', 'ZEP']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mwig40tabela = pd.read_html('http://stooq.pl/q/i/?s=mwig40')[1]\n",
         "mwig40 = mwig40tabela.drop(mwig40tabela.columns[-1], axis=1).dropna()\n",
         "first_column = mwig40.iloc[:, 0].tolist()\n",
         "print(first_column)"
@@ -79,33 +189,44 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5cNvfk1ZH1v",
-        "outputId": "c1e13766-238e-46ee-ae5a-f343ac6f8d3c"
+        "outputId": "895de9de-4b9a-40d4-9a7f-c7eaf97ad789"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['11B', 'APR', 'ASB', 'BDX', 'BFT', 'BHW', 'BMC', 'BML', 'BNP', 'CAR', 'CIE', 'CMR', 'DOM', 'DVL', 'EAT', 'ENA', 'EUR', 'GEA', 'GPP', 'GPW', 'HUG', 'ING', 'LVC', 'LWB', 'MAB', 'MBR', 'NEU', 'PEP', 'PKP', 'SLV', 'STH', 'TEN', 'WPL', 'XTB', 'ZEP']\n"
+            "['11B', 'APR', 'ASB', 'BDX', 'BFT', 'BHW', 'BMC', 'BML', 'BNP', 'CAR', 'CIE', 'CMR', 'DOM', 'DVL', 'EAT', 'EUR', 'GEA', 'GPP', 'GPW', 'HUG', 'ING', 'LVC', 'LWB', 'MAB', 'MBR', 'NEU', 'PEP', 'PKP', 'SLV', 'STH', 'TEN', 'WPL', 'XTB', 'ZEP']\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pdGV6_1CD3Q6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "wig_banki = ['ALR', 'BHW', 'BNP', 'BOS', 'GTN', 'ING', 'MBK', 'MIL', 'PEO', 'PKO', 'SAN', 'SPL', 'UCG']\n",
-        "wig_20 = ['ACP', 'ALE', 'ALR', 'CDR', 'CPS', 'DNP', 'JSW', 'KGH', 'KRU', 'KTY', 'LPP', 'MBK', 'OPL', 'PCO', 'PEO', 'PGE', 'PKN', 'PKO', 'PZU', 'SPL']\n",
-        "mwig_40 = ['11B', 'APR', 'ASB', 'BDX', 'BFT', 'BHW', 'BMC', 'BML', 'BNP', 'CAR', \n",
-        "           'CIE', 'CMR', 'DOM', 'DVL', 'EAT', 'ENA', 'EUR', 'GEA', 'GPP', 'GPW', \n",
-        "           'HUG', 'ING', 'LVC', 'LWB', 'MAB', 'MBR', 'NEU', 'PEP', 'PKP', 'SLV', \n",
-        "           'STH', 'TEN', 'WPL', 'XTB', 'ZEP']"
+        "wig_banki = ['ALR', 'BHW', 'BNP', 'BOS', 'GTN', 'ING', 'MBK', 'MIL', 'PEO', \n",
+        "             'PKO', 'SAN', 'SPL', 'UCG']\n",
+        "wig_20 = ['ACP', 'ALE', 'ALR', 'CDR', 'CPS', 'DNP', 'JSW', 'KGH', 'KRU', 'KTY', \n",
+        "          'LPP', 'MBK', 'OPL', 'PCO', 'PEO', 'PGE', 'PKN', 'PKO', 'PZU', 'SPL']\n",
+        "mwig_40 = ['11B', 'APR', 'ASB', 'ATT', 'BDX', 'BFT', 'BHW', 'BMC', 'BML', 'BNP', \n",
+        "           'CAR', 'CCC', 'CIE', 'CMR', 'DOM', 'DVL', 'EAT', 'ENA', 'EUR', 'GEA', \n",
+        "           'GPP', 'GPW', 'HUG', 'ING', 'KER', 'LVC', 'LWB', 'MAB', 'MBR', 'MIL', \n",
+        "           'NEU', 'PEP', 'PKP', 'SLV', 'STH', 'TEN', 'TPE', 'WPL', 'XTB', 'ZEP']\n"
       ],
       "metadata": {
         "id": "z3Flr5Y7nueP"
       },
-      "execution_count": 2,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -137,6 +258,7 @@
       "source": [
         "urls = []\n",
         "tickers = wig_banki + wig_20 + mwig_40\n",
+        "spolki = second_wigbanki + second_wig20 + second_mwig40\n",
         "for bank in tickers:\n",
         "  url = f'https://stooq.pl/q/h/?s={bank}'\n",
         "  urls.append(url)"
@@ -144,117 +266,92 @@
       "metadata": {
         "id": "XjFL_fSroRZr"
       },
-      "execution_count": 3,
+      "execution_count": 52,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "urls"
+        "unique_urls = list(set(urls))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qELblDtA-Jxd",
-        "outputId": "a6bd7c34-0259-44af-db21-b4f6c30006cc"
+        "id": "qELblDtA-Jxd"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['https://stooq.pl/q/h/?s=ALR',\n",
-              " 'https://stooq.pl/q/h/?s=BHW',\n",
-              " 'https://stooq.pl/q/h/?s=BNP',\n",
-              " 'https://stooq.pl/q/h/?s=BOS',\n",
-              " 'https://stooq.pl/q/h/?s=GTN',\n",
-              " 'https://stooq.pl/q/h/?s=ING',\n",
-              " 'https://stooq.pl/q/h/?s=MBK',\n",
-              " 'https://stooq.pl/q/h/?s=MIL',\n",
-              " 'https://stooq.pl/q/h/?s=PEO',\n",
-              " 'https://stooq.pl/q/h/?s=PKO',\n",
-              " 'https://stooq.pl/q/h/?s=SAN',\n",
-              " 'https://stooq.pl/q/h/?s=SPL',\n",
-              " 'https://stooq.pl/q/h/?s=UCG',\n",
-              " 'https://stooq.pl/q/h/?s=ACP',\n",
-              " 'https://stooq.pl/q/h/?s=ALE',\n",
-              " 'https://stooq.pl/q/h/?s=ALR',\n",
-              " 'https://stooq.pl/q/h/?s=CDR',\n",
-              " 'https://stooq.pl/q/h/?s=CPS',\n",
-              " 'https://stooq.pl/q/h/?s=DNP',\n",
-              " 'https://stooq.pl/q/h/?s=JSW',\n",
-              " 'https://stooq.pl/q/h/?s=KGH',\n",
-              " 'https://stooq.pl/q/h/?s=KRU',\n",
-              " 'https://stooq.pl/q/h/?s=KTY',\n",
-              " 'https://stooq.pl/q/h/?s=LPP',\n",
-              " 'https://stooq.pl/q/h/?s=MBK',\n",
-              " 'https://stooq.pl/q/h/?s=OPL',\n",
-              " 'https://stooq.pl/q/h/?s=PCO',\n",
-              " 'https://stooq.pl/q/h/?s=PEO',\n",
-              " 'https://stooq.pl/q/h/?s=PGE',\n",
-              " 'https://stooq.pl/q/h/?s=PKN',\n",
-              " 'https://stooq.pl/q/h/?s=PKO',\n",
-              " 'https://stooq.pl/q/h/?s=PZU',\n",
-              " 'https://stooq.pl/q/h/?s=SPL',\n",
-              " 'https://stooq.pl/q/h/?s=11B',\n",
-              " 'https://stooq.pl/q/h/?s=APR',\n",
-              " 'https://stooq.pl/q/h/?s=ASB',\n",
-              " 'https://stooq.pl/q/h/?s=BDX',\n",
-              " 'https://stooq.pl/q/h/?s=BFT',\n",
-              " 'https://stooq.pl/q/h/?s=BHW',\n",
-              " 'https://stooq.pl/q/h/?s=BMC',\n",
-              " 'https://stooq.pl/q/h/?s=BML',\n",
-              " 'https://stooq.pl/q/h/?s=BNP',\n",
-              " 'https://stooq.pl/q/h/?s=CAR',\n",
-              " 'https://stooq.pl/q/h/?s=CIE',\n",
-              " 'https://stooq.pl/q/h/?s=CMR',\n",
-              " 'https://stooq.pl/q/h/?s=DOM',\n",
-              " 'https://stooq.pl/q/h/?s=DVL',\n",
-              " 'https://stooq.pl/q/h/?s=EAT',\n",
-              " 'https://stooq.pl/q/h/?s=ENA',\n",
-              " 'https://stooq.pl/q/h/?s=EUR',\n",
-              " 'https://stooq.pl/q/h/?s=GEA',\n",
-              " 'https://stooq.pl/q/h/?s=GPP',\n",
-              " 'https://stooq.pl/q/h/?s=GPW',\n",
-              " 'https://stooq.pl/q/h/?s=HUG',\n",
-              " 'https://stooq.pl/q/h/?s=ING',\n",
-              " 'https://stooq.pl/q/h/?s=LVC',\n",
-              " 'https://stooq.pl/q/h/?s=LWB',\n",
-              " 'https://stooq.pl/q/h/?s=MAB',\n",
-              " 'https://stooq.pl/q/h/?s=MBR',\n",
-              " 'https://stooq.pl/q/h/?s=NEU',\n",
-              " 'https://stooq.pl/q/h/?s=PEP',\n",
-              " 'https://stooq.pl/q/h/?s=PKP',\n",
-              " 'https://stooq.pl/q/h/?s=SLV',\n",
-              " 'https://stooq.pl/q/h/?s=STH',\n",
-              " 'https://stooq.pl/q/h/?s=TEN',\n",
-              " 'https://stooq.pl/q/h/?s=WPL',\n",
-              " 'https://stooq.pl/q/h/?s=XTB',\n",
-              " 'https://stooq.pl/q/h/?s=ZEP']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "execution_count": 40,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "all_tables = []\n",
-        "for i, url in enumerate(urls):\n",
+        "for i, url in enumerate(unique_urls):\n",
         "  tables = pd.read_html(url)\n",
         "  table = tables[1].dropna().copy()\n",
         "  ticker = tickers[i] #wig_banki\n",
-        "  table.loc[:, 'company'] = ticker #table['company'] = ticker\n",
+        "  table.loc[:, 'ticker'] = ticker #table['company'] = ticker\n",
         "  all_tables.append(table)"
       ],
       "metadata": {
         "id": "PqzbslFxooOQ"
       },
-      "execution_count": 7,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TABELKI = []\n",
+        "for i, url in enumerate(urls):\n",
+        "  tables = pd.read_html(url)\n",
+        "  table = tables[1].copy()\n",
+        "  ticker = tickers[i] #wig_banki\n",
+        "  spolka = spolki[i]\n",
+        "  table.loc[:, 'ticker'] = ticker #table['company'] = ticker\n",
+        "  table.loc[:, 'spolka'] = spolka\n",
+        "  TABELKI.append(table)"
+      ],
+      "metadata": {
+        "id": "fyo6REBp4O4n"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "KOMBINOWANA_TABELKA=pd.concat(TABELKI)"
+      ],
+      "metadata": {
+        "id": "0E_Uk8_u45MY"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterate over all columns\n",
+        "for column in KOMBINOWANA_TABELKA.columns:\n",
+        "    # Check if the column values are of string type\n",
+        "    if KOMBINOWANA_TABELKA[column].dtype == 'object':\n",
+        "        # Convert Polish characters to ASCII equivalents in each string column\n",
+        "        KOMBINOWANA_TABELKA[column] = KOMBINOWANA_TABELKA[column].apply(lambda x: unidecode(str(x)))"
+      ],
+      "metadata": {
+        "id": "JFpc-z8o7g5R"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "KOMBINOWANA_TABELKA.to_csv('KOMBINOWANA_TABELKA.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "Z0dncJT84_eq"
+      },
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -265,7 +362,7 @@
       "metadata": {
         "id": "xSC0_Q97peyN"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -281,7 +378,7 @@
         "id": "OitcPJg-pqun",
         "outputId": "d0db96ce-524e-4188-865c-3a51ea1ed877"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,12 +705,12 @@
     {
       "cell_type": "code",
       "source": [
-        "combined_table.to_csv('combined_table.csv', index=False)"
+        "combined_table.to_csv('combined_table.csv', index=False, encoding='utf-8')"
       ],
       "metadata": {
         "id": "IoB-JRMo8i0b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -634,7 +731,7 @@
         "id": "zG8ybHDutuNU",
         "outputId": "cd7e319a-6c9e-4de4-cbda-aeca07d47f97"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +797,7 @@
       "metadata": {
         "id": "pJqI1Rgd1vrR"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -711,7 +808,7 @@
       "metadata": {
         "id": "NGc1GD_q_22B"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -927,7 +1024,7 @@
       "metadata": {
         "id": "HNLeyqOth767"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -939,7 +1036,7 @@
       "metadata": {
         "id": "GtPztdO5iPVM"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +1048,7 @@
       "metadata": {
         "id": "OmebhbEJiVgK"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -969,7 +1066,7 @@
         "id": "VJLiqgCxi2z8",
         "outputId": "4dda72e9-65ba-4998-f517-788074ccf3df"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1010,7 +1107,7 @@
         "id": "c0slCeg-jzsc",
         "outputId": "ed59de95-b7a9-4c23-887c-72e465562500"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1042,7 +1139,7 @@
       "metadata": {
         "id": "iRCRdYVfk333"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1072,7 +1169,7 @@
         "id": "Fy2Q0Z57oSpZ",
         "outputId": "87cdf893-0082-494a-b8d0-a775d5c594d7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1124,7 +1221,7 @@
         "id": "nSW9D4Zfo4jY",
         "outputId": "753b1d11-6d1c-4c10-e25a-dd0ab4447abf"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1171,7 +1268,7 @@
         "id": "7jnRVtcqo4cv",
         "outputId": "15ba2573-9bc6-4413-ed35-04798dec5349"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1194,6 +1291,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "degree_table.to_csv('degree_table.csv', index = False, encoding='utf-8')"
+      ],
+      "metadata": {
+        "id": "CbyNMkKQvCJG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
