Utworzono za pomocą Colaboratory

--- a/stock_market_indices.ipynb
+++ b/stock_market_indices.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb4WrDEDrUBA0597Xv/L9K",
+      "authorship_tag": "ABX9TyMYv8EQU2Rchqkuh5V082oY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -671,27 +671,34 @@
       "source": [
         "for symbol in symbols:\n",
         "    # Create a ticker object\n",
-        "    ticker = yf.Ticker(symbol).info\n",
+        "    ticker = yf.Ticker(symbol)\n",
         "\n",
-        "    # Get the specific financial metrics\n",
-        "    roe = ticker['returnOnEquity']\n",
-        "    roa = ticker['returnOnAssets']\n",
+        "    # Get the financial data for the ticker\n",
+        "    financial_data = ticker.info\n",
         "\n",
-        "    # Print the results\n",
-        "    print(\"Symbol:\", symbol)\n",
-        "    print(\"Return on Equity (ROE):\", roe)\n",
-        "    print(\"Return on Assets (ROA):\", roa)\n",
-        "    print()"
+        "    # Check if the financial data is available\n",
+        "    if 'returnOnEquity' in financial_data and 'returnOnAssets' in financial_data:\n",
+        "        # Get the specific financial metrics\n",
+        "        roe = financial_data['returnOnEquity']\n",
+        "        roa = financial_data['returnOnAssets']\n",
+        "\n",
+        "        # Print the results\n",
+        "        print(\"Symbol:\", symbol)\n",
+        "        print(\"Return on Equity (ROE):\", roe)\n",
+        "        print(\"Return on Assets (ROA):\", roa)\n",
+        "        print()\n",
+        "    else:\n",
+        "        print(\"Financial data not available for symbol:\", symbol)\n",
+        "        print()\n"
       ],
       "metadata": {
         "id": "gQMx7o8HX13W",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 304
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2231f8c1-d3cc-4768-ef94-a0ac48a144c3"
+        "outputId": "0d123ccb-2c4b-468c-8779-8f87a521317c"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,18 +707,51 @@
             "Symbol: ALR.WA\n",
             "Return on Equity (ROE): 0.14089\n",
             "Return on Assets (ROA): 0.01041\n",
+            "\n",
+            "Financial data not available for symbol: BHW.WA\n",
+            "\n",
+            "Symbol: BNP.WA\n",
+            "Return on Equity (ROE): 0.056110002\n",
+            "Return on Assets (ROA): 0.00455\n",
+            "\n",
+            "Symbol: BOS.WA\n",
+            "Return on Equity (ROE): 0.08257\n",
+            "Return on Assets (ROA): 0.00756\n",
+            "\n",
+            "Financial data not available for symbol: GTN.WA\n",
+            "\n",
+            "Symbol: ING.WA\n",
+            "Return on Equity (ROE): 0.16346\n",
+            "Return on Assets (ROA): 0.00836\n",
+            "\n",
+            "Symbol: MBK.WA\n",
+            "Return on Equity (ROE): -0.079840004\n",
+            "Return on Assets (ROA): -0.0050700004\n",
+            "\n",
+            "Symbol: MIL.WA\n",
+            "Return on Equity (ROE): -0.10682999\n",
+            "Return on Assets (ROA): -0.0058600004\n",
+            "\n",
+            "Symbol: PEO.WA\n",
+            "Return on Equity (ROE): 0.066479996\n",
+            "Return on Assets (ROA): 0.0058\n",
+            "\n",
+            "Symbol: PKO.WA\n",
+            "Return on Equity (ROE): 0.08968\n",
+            "Return on Assets (ROA): 0.00777\n",
+            "\n",
+            "Symbol: SAN.WA\n",
+            "Return on Equity (ROE): 0.10821\n",
+            "Return on Assets (ROA): 0.0063\n",
+            "\n",
+            "Symbol: SPL.WA\n",
+            "Return on Equity (ROE): 0.108430006\n",
+            "Return on Assets (ROA): 0.012669999\n",
+            "\n",
+            "Symbol: UCG.WA\n",
+            "Return on Equity (ROE): 0.13172\n",
+            "Return on Assets (ROA): 0.00895\n",
             "\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-1a4f830f02c3>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# Get the specific financial metrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mroe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mticker\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'returnOnEquity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mroa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mticker\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'returnOnAssets'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'returnOnEquity'"
           ]
         }
       ]
